--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
 .App {
   text-align: center;
+  align-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.box{
+display: inline-block;
+border: 1px solid black;
+height: 100px;
+width: 100px;
+line-height: 80px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.border{
+  display:inline-flex;
+  flex-wrap: wrap;
+  width: 400px;
+  margin-left: 50px;
+}
+.button{
+  width: 100px;
+  height: 100px;
+  margin-top:  10px ;
+  margin-left: 95px;
+  
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  h2 {
+    align-content: center;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
