--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,27 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url('./bg2tic.jpg');
+  background-size: cover;
+  height: 100vh;
+  background-repeat: no-repeat;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media only screen and (max-width: 700px) {
+  body {
+    
+    background-image: url('./bg4tic.png');
+    height: 750px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
+  
+  }
+}
+
